# pdf2markdown

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  README_zh.md  app.py  main.py  markpdfdown_core.py  packages.txt  pdf2markdown_core.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_image.yml  changelog.yml
.streamlit/: config.toml
core/: FileWorker.py  ImageWorker.py  LLMClient.py  PDFWorker.py  Util.py
tests/: output_tables.md  test_util.py
tests/cases/: formula_01.md  table_01.md
