[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2markdown"
version = "1.0.0"
description = "A professional Streamlit application for converting PDF files to Markdown format using AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yilmaz Kusatmer", email = "kusatmer@googlemail.com"}
]
maintainers = [
    {name = "Yilmaz Kusatmer", email = "kusatmer@googlemail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
keywords = ["pdf", "markdown", "ai", "conversion", "streamlit", "nlp"]
requires-python = ">=3.9"
dependencies = [
    "openai>=1.66.0",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.1.0",
    "pillow>=10.0.0",
    "streamlit>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yilmazkusatmer/pdf2markdown"
Repository = "https://github.com/yilmazkusatmer/pdf2markdown"
Documentation = "https://github.com/yilmazkusatmer/pdf2markdown#readme"
"Bug Tracker" = "https://github.com/yilmazkusatmer/pdf2markdown/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "markpdfdown_core*"]

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-string-normalization = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["core", "markpdfdown_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# Streamlit specific configuration
[tool.streamlit]
# This section can be used for Streamlit-specific settings if needed 